# pvr.tubitv

./: CMakeLists.txt  README.md  azure-pipelines.yml
debian/: changelog.in  control  copyright  kodi-pvr-tubitv.install  rules
depends/common/nlohmann-json/: nlohmann-json.txt
pvr.tubitv/: addon.xml.in  changelog.txt
pvr.tubitv/resources/: settings.xml
pvr.tubitv/resources/language/resource.language.af_za/: strings.po
pvr.tubitv/resources/language/resource.language.am_et/: strings.po
pvr.tubitv/resources/language/resource.language.ar_sa/: strings.po
pvr.tubitv/resources/language/resource.language.ast_es/: strings.po
pvr.tubitv/resources/language/resource.language.az_az/: strings.po
pvr.tubitv/resources/language/resource.language.en_us/: strings.po
src/: ClientInstance.cpp  ClientInstance.h  TubiAddon.cpp  TubitvData.cpp  TubitvData.h  Url.cpp  addon.cpp
